--- a/task2/rest-api-basics/repository/build.gradle
+++ b/task2/rest-api-basics/repository/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id "org.liquibase.gradle" version "2.0.4"
+    id "org.liquibase.gradle" version "${liquibasePluginVersion}"
 }
 
 group 'com.epam.esm'
@@ -28,17 +28,17 @@ liquibase {
 dependencies {
     implementation project(':domain')
 
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
+    implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: "${hikariVersion}"
 
-    liquibaseRuntime group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
-    liquibaseRuntime group: 'org.liquibase', name: 'liquibase-core', version: '4.2.2'
+    liquibaseRuntime group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
+    liquibaseRuntime group: 'org.liquibase', name: 'liquibase-core', version: "${liquibaseVersion}"
 
     implementation group: 'org.springframework', name: 'spring-context', version: "$springVersion"
     implementation group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
 
-    implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.4.2'
+    implementation group: 'org.springframework.data', name: 'spring-data-commons', version: "${springDataVersion}"
 
     testImplementation group: 'org.springframework', name: 'spring-test', version: "${springVersion}"
-    testImplementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
-    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    testImplementation group: 'com.h2database', name: 'h2', version: "${h2Version}"
 }
