--- a/task2/rest-api-basics/service/build.gradle
+++ b/task2/rest-api-basics/service/build.gradle
@@ -10,12 +10,12 @@ dependencies {
     implementation project(':domain')
 
     implementation group: 'org.springframework', name: 'spring-context', version: "$springVersion"
-    implementation group: 'org.springframework', name: 'spring-tx', version: "$springVersion"
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
 
-    implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.4.2'
+    implementation group: 'org.springframework.data', name: 'spring-data-commons', version: "${springDataVersion}"
 
-    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: "${modelmapperVersion}"
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksonVersion}"
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jacksonVersion}"
 }
