--- a/task3/web/src/main/resources/application.properties
+++ b/task3/web/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=root
 # logging
 logging.level.com.epam.esm=debug
 logging.level.org.springframework=debug
+
+# json
+spring.jackson.serialization.wrap-root-value=true
+spring.jackson.deserialization.unwrap-root-value=true
+spring.jackson.property-naming-strategy=com.fasterxml.jackson.databind.PropertyNamingStrategy.SnakeCaseStrategy
