add user, order orm entities
add user, order servicies, repositories, controllers

add user, order dtos

--- a/task3/web/src/main/resources/application.properties
+++ b/task3/web/src/main/resources/application.properties
@@ -15,3 +15,7 @@ logging.level.org.springframework=debug
 spring.jackson.serialization.wrap-root-value=true
 spring.jackson.deserialization.unwrap-root-value=true
 spring.jackson.property-naming-strategy=com.fasterxml.jackson.databind.PropertyNamingStrategy.SnakeCaseStrategy
+
+# jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
