--- a/task3/repository/build.gradle
+++ b/task3/repository/build.gradle
@@ -34,3 +34,9 @@ dependencies {
 
     testImplementation group: 'com.h2database', name: 'h2', version: "${h2Version}"
 }
+
+task dropAllUpdate {
+    dependsOn 'dropAll'
+    dependsOn 'update'
+    tasks.findByName('update').mustRunAfter 'dropAll'
+}
