--- a/task3/repository/src/main/resources/database.properties
+++ b/task3/repository/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 jdbc.driver = org.postgresql.Driver
 jdbc.url = jdbc:postgresql://localhost:5432/postgres
-jdbc.schema = rest
+jdbc.schema = gift_certificates_system
 jdbc.username = postgres
 jdbc.password = root
