--- a/task3/web/src/main/resources/application.properties
+++ b/task3/web/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 # database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=rest
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=gift_certificates_system
 spring.datasource.username=postgres
 spring.datasource.password=root
 
