--- a/task3/repository/build.gradle
+++ b/task3/repository/build.gradle
@@ -3,6 +3,9 @@ dependencies {
 
     implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
     implementation group: 'org.liquibase', name: 'liquibase-core', version: "${liquibaseVersion}"
+    implementation group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
+
+    annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation group: 'com.h2database', name: 'h2', version: "${h2Version}"
 }
