--- a/task4/build.gradle
+++ b/task4/build.gradle
@@ -18,19 +18,22 @@ subprojects {
     ext {
         postgresqlVersion = '42.2.19'
         h2Version = '1.4.200'
-        liquibaseVersion = '4.3.1'
+        liquibaseVersion = '4.3.2'
 
         modelmapperVersion = '2.3.9'
         lombokVersion = '1.18.18'
     }
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+        implementation group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
+        annotationProcessor 'org.projectlombok:lombok'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
