--- a/task4/web/src/main/resources/application-dev.properties
+++ b/task4/web/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+spring.datasource.initialization-mode=never
+
 logging.level.com.epam.esm=debug
 logging.level.org.springframework=debug
 logging.level.liquibase=debug
