add web security: basic auth
update user repository: use jpa repository

add userdetails serivice as dao auth

--- a/task4/web/src/main/resources/application-dev.properties
+++ b/task4/web/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:db/dataset/data.sql
 
 logging.level.com.epam.esm=debug
 logging.level.org.springframework=debug
