--- a/task4/build.gradle
+++ b/task4/build.gradle
@@ -9,7 +9,6 @@ subprojects {
     version = '0.0.1-SNAPSHOT'
 
     sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
 
     apply plugin: 'java-library'
     apply plugin: 'org.springframework.boot'
@@ -31,6 +30,7 @@ subprojects {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
+        implementation 'org.springframework.boot:spring-boot-starter-security'
 
         implementation group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
         annotationProcessor 'org.projectlombok:lombok'
