update tag repository: transition to jpa repository, add extra

--- a/task4/web/build.gradle
+++ b/task4/web/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     implementation project(':service')
+    implementation project(':repository')
+    implementation project(':domain')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
